version 1 page, fix html, contraste, form, alt

--- a/style.css
+++ b/style.css
@@ -326,6 +326,7 @@ a:hover {
     float: left;
     margin-top: 4px;
     font-size: 16px;
+    margin-left: 30px;
 }
 
 .navbar-nav .open .dropdown-menu > li > a {
@@ -366,7 +367,7 @@ a:hover {
     .site-navigation {
         position: absolute;
         top: 50%;
-        right: 20px;
+        right: 20%;
         transform: translate(0, -50%);
         -webkit-transform: translateY(-50%);
     }
@@ -648,10 +649,23 @@ h6,
 p,
 label,
 .btn,
-a {
+ {
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
+}
+
+a {
+  color:#FFFFFF;
+}
+
+footer ul {
+
+  margin-top: 15px;
+}
+
+footer li {
+  margin-left: -25px;
 }
 
 .container {
@@ -677,7 +691,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 16px;
 }
 
 .tight-width-whitespace {
@@ -709,7 +723,7 @@ h2 {
     line-height: 1.4em;
 }
 
-h3 {
+h4 {
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
@@ -766,21 +780,21 @@ h4 {
     background-color: #FFFFFF;
 }
 
-.bgc-dark-slate-blue {
-    background-color: #364577;
-}
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #813514;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #ac5733!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #813514;
     color: #FFFFFF!important;
+    
+
+    /*--Modèle tangerine : #F3976C;--*/
 }
 
 .btn-atomic-tangerine:hover {
@@ -807,6 +821,10 @@ h4 {
 .icon-dark-slate-blue {
     color: #364577!important;
     border-color: #364577!important;
+}
+
+.texte-page2 {
+  color: #FFFFFF!important;
 }
 
 .bg-dots-bg {
@@ -1039,4 +1057,17 @@ h4 {
     .bloc-mob-center-text {
         text-align: center;
     }
+}
+
+
+.citation {
+  font-style: italic;
+}
+
+.oldimg {
+  font-size: 20px;
+  line-height: 1.4em;
+  font-family: "helvetica";
+  font-weight: 400;
+  color: #575757!important;
 }
